--- a/src/app/components/repos/repos.component.html
+++ b/src/app/components/repos/repos.component.html
@@ -16,7 +16,7 @@
     <div class="flex flex-col">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4 justify-items-center justify-center md:w-[60vw] w-[80vw]">
         <div *ngFor="let repo of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
-          <div class="md:w-[60vw] w-[80vw] md:w-[30vw] m-[10px] p-[10px] border border-gray-300 rounded-[5px]">
+          <div class="w-[80vw] md:w-[30vw] m-[10px] p-[10px] border border-gray-300 rounded-[5px]">
             <ngx-skeleton-loader [count]="1" appearance="line" animation="pulse"></ngx-skeleton-loader>
             <ngx-skeleton-loader [count]="1" appearance="line" animation="pulse"></ngx-skeleton-loader>
             <div class="flex flex-wrap flex-row mt-[10px] justify-flex-start">
