--- a/src/app/components/repoview/repoview.component.html
+++ b/src/app/components/repoview/repoview.component.html
@@ -1,4 +1,4 @@
 <div class="profile-repos">
   <app-profile [userData]="userData"></app-profile>
-  <app-repos [repositories]="repositories"></app-repos>
+  <app-repos [username] = "username" [totalRepos] = "totalRepos"></app-repos>
 </div>
